Ajustes de CSS e conteúdo

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Cas UX Design - Design solutions for digital products that delivers value to users, solving their problems while providing enjoyable experiences.">
     <meta name="author" content="Cas UX Design - Raoni Caselli">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="ncHjt0iCD8DCi6Sdg4gmVU1VqlcUNkS53qASoq0i_d8" />
     <link rel="stylesheet" href="fonts/style.css">
     <link href="css/mdi/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/vendor/unslider/unslider.css">
