--- a/html/projects/dolphin.html
+++ b/html/projects/dolphin.html
@@ -37,7 +37,7 @@
     </div>
   </article>
   <article class="back-row container">
-    <a class="mdi mdi-arrow-left mdi-24px close-button"><span>Back</span></a>
+    <button class="close-button"><span>Close</span><i class="mdi mdi-close mdi-24px"/></button>
   </article>
 </section>
 
