--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Cas UX Design - Design solutions for digital products that delivers value to users, solving their problems while providing enjoyable experiences.">
     <meta name="author" content="Cas UX Design - Raoni Caselli">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="ncHjt0iCD8DCi6Sdg4gmVU1VqlcUNkS53qASoq0i_d8" />
     <link rel="stylesheet" href="fonts/style.css">
     <link href="css/mdi/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="js/vendor/unslider/unslider.css">
@@ -128,12 +129,12 @@
                 <section class="row">
                     <article class="column align-start flex-75 mobile-flex-1">
                         <p>I’m a UX Designer crazy about new technologies and creating friendly and easy to use interfaces. I love to go surfing early in the morning to start my day replenished and ready for the challenges that comes up. I am married to
-                            Luísa, a psychologist who is always teaching me new things about feelings and behaviours and we have a son, Dante, my happy baby that is showing me a different side of life.</p>
+                            Luísa, a psychologist who is always teaching me new things about emotional intelligence and we have a son, Dante, my happy baby that is showing me a different side of life.</p>
                         <p>I want to find an amazing company that values me as a human being and can help me grow as a UX Designer. I’m looking for a mature design team where I can learn and improve my skills.</p>
-                        <a href="#" class="button flat">Download resume</a>
+                        <button class="button flat">Download resume</button>
                     </article>
                     <article class="flex-25 family-img">
-                        <img src="img/family.jpg" alt="My family: Raoni, Luísa and Dante">
+                        <img src="img/family.jpg" alt="My family: Me, Luísa and Dante" title="My family: Me, Luísa and Dante">
                     </article>
                 </section>
             </div>
@@ -153,7 +154,7 @@
                                 <article class="flex-50 mobile-flex-1 column align-start">
                                     <h3>Dolphin Surf App</h3>
                                     <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-                                    <a id="open-dolphin" class="button flat">Open project</a>
+                                    <button id="open-dolphin" class="button flat">Open project</button>
                                 </article>
                             </section>
                         </li>
@@ -166,7 +167,7 @@
                                 <article class="flex-50 mobile-flex-1 column align-start">
                                     <h3>Healfies</h3>
                                     <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-                                    <a href="#" class="button flat">Open project</a>
+                                    <button href="#" class="button flat">Open project</button>
                                 </article>
                             </section>
                         </li>
@@ -183,40 +184,27 @@
                     <ul>
 
                         <li>
-                            <section class="row mobile-column space-between align-start">
-                                <a href="#" class="flex-50 mobile-flex-1">
-                                    <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
+                            <section class="column flex-center align-center">
+                                <a href="./img/ux_process.png" target="_blank" class="img-wrapper column flex-center">
+                                    <img src="./img/ux_process.png" alt="Full UX Process" class="portfolio-cover" />
                                 </a>
-                                <article class="flex-50 mobile-flex-1 column align-start">
-                                    <h3>Dolphin Surf App</h3>
-                                    <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-                                    <a href="#" class="button flat">Open project</a>
+                                <article class="column align-start">
+                                    <h3>User-centered Design</h3>
+                                    <p>This is the entire process I've been following in the last 2 years. It's based on the UCD methodology and it uses Design Thinking and Lean UX for different stages of the process</p>
+                                    <a href="https://docs.google.com/spreadsheets/d/1UdMUyApmVXzIVa8aWCdhNGpnz65aJYs10ch0PuY1yb8/edit?usp=sharing" class="link flat" target="_blank">More info (in pt-br only)</a>
                                 </article>
                             </section>
                         </li>
 
                         <li>
-                            <section class="row mobile-column space-between align-start">
-                                <a href="#" class="flex-50 mobile-flex-1">
-                                    <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
+                            <section class="column flex-center align-center">
+                                <a href="./img/problem_framing.png" target="_blank" class="img-wrapper column flex-center">
+                                    <img src="./img/problem_framing.png" alt="Problem framing" class="portfolio-cover" />
                                 </a>
-                                <article class="flex-50 mobile-flex-1 column align-start">
-                                    <h3>Healfies</h3>
-                                    <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-                                    <a href="#" class="button flat">Open project</a>
-                                </article>
-                            </section>
-                        </li>
-
-                        <li>
-                            <section class="row mobile-column space-between align-start">
-                                <a href="#" class="flex-50 mobile-flex-1">
-                                    <img src="./img/portfolio/p1-cover.jpg" alt="Dolphin Surf App" class="portfolio-cover" />
-                                </a>
-                                <article class="flex-50 mobile-flex-1 column align-start">
-                                    <h3>Spinver</h3>
-                                    <p>Platform for surfers to share wave reports between friends and also record their own surf sessions to track their performance over time.</p>
-                                    <a href="#" class="button flat">Open project</a>
+                                <article class="column align-start">
+                                    <h3>Problem framing</h3>
+                                    <p>First we have to understand really well the problem, who are the impacted actors, what are the difficulties around this problem, how is the current user experience and if it's a problem that really deserves to be solved</p>
+                                    <a href="https://docs.google.com/presentation/d/1wN5MsY5VpTWbtCHpejFolEXt3PIW1uUYkoMBJlIfh4c/edit?usp=sharing" class="link flat" target="_blank">More info (in pt-br only)</a>
                                 </article>
                             </section>
                         </li>
@@ -237,7 +225,7 @@
                     <input class="input" required name="email" id="cemail" type="email" placeholder="Personal or company email" />
                     <label for="cmessage"><p>Message</p></label>
                     <textarea class="input" required name="message" id="cmessage" rows="3" placeholder="What do you want to ask me?"></textarea>
-                    <a class="button flat">Send message</a>
+                    <button type="submit" class="button">Send message</button>
                 </form>
             </article>
         </section>
