--- a/html/index.html
+++ b/html/index.html
@@ -34,8 +34,10 @@
     <script src="js/vendor/unslider/unslider-min.js"></script>
     <script src="js/vendor/jquery-event-move.js"></script>
     <script src="js/vendor/jquery-event-swipe.js"></script>
-    <script src="js/grunt-project.min.js"></script>
+    <script src="js/vendor/smtp.js"></script>
+    <script src="js/grunt-project.js"></script>
     <script src="slidemenu.js"></script>
+
 </body>
 
 </html>
