Add IDs for tag manager

--- a/html/index.html
+++ b/html/index.html
@@ -2,41 +2,63 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Cas UX Design - Raoni Caselli</title>
-    <meta name="keywords" content="UX Design, user experience, design, freelance, digital products, portfolio, Florianópolis, value, user centered, problem solving">
-    <meta name="description" content="Cas UX Design - Design solutions for digital products that delivers value to users, solving their problems while providing enjoyable experiences.">
-    <meta name="author" content="Cas UX Design - Raoni Caselli">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="google-site-verification" content="ncHjt0iCD8DCi6Sdg4gmVU1VqlcUNkS53qASoq0i_d8" />
-    <link rel="stylesheet" href="fonts/style.css">
-    <link href="css/mdi/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="js/vendor/unslider/unslider.css">
-    <link rel="stylesheet" href="js/vendor/unslider/unslider-dots.css">
-    <link rel="stylesheet" href="css/grunt-project.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66940670-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-66940670-1');
+  </script>
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-5QSGHCC');</script>
+  <!-- End Google Tag Manager -->
+
+  <meta charset="utf-8">
+  <title>Cas UX Design - Raoni Caselli</title>
+  <meta name="keywords" content="UX Design, user experience, design, freelance, digital products, portfolio, Florianópolis, value, user centered, problem solving">
+  <meta name="description" content="Cas UX Design - Design solutions for digital products that delivers value to users, solving their problems while providing enjoyable experiences.">
+  <meta name="author" content="Cas UX Design - Raoni Caselli">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="google-site-verification" content="ncHjt0iCD8DCi6Sdg4gmVU1VqlcUNkS53qASoq0i_d8" />
+  <link rel="stylesheet" href="fonts/style.css">
+  <link href="css/mdi/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="js/vendor/unslider/unslider.css">
+  <link rel="stylesheet" href="js/vendor/unslider/unslider-dots.css">
+  <link rel="stylesheet" href="css/grunt-project.css">
 </head>
 
 <body>
-    <div id="project-page"></div>
-    <!-- build:section sidemenu --><!-- /build -->
-    <!-- build:section header --><!-- /build -->
-    <main id="panel" class="panel">
-      <!-- build:section home --><!-- /build -->
-      <!-- build:section about --><!-- /build -->
-      <!-- build:section portfolio --><!-- /build -->
-      <!-- build:section process --><!-- /build -->
-      <!-- build:section contact --><!-- /build -->
-    </main>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5QSGHCC"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
+  <div id="project-page"></div>
+  <!-- build:section sidemenu --><!-- /build -->
+  <!-- build:section header --><!-- /build -->
+  <main id="panel" class="panel">
+    <!-- build:section home --><!-- /build -->
+    <!-- build:section about --><!-- /build -->
+    <!-- build:section portfolio --><!-- /build -->
+    <!-- build:section process --><!-- /build -->
+    <!-- build:section contact --><!-- /build -->
+  </main>
 
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/slideout.min.js"></script>
-    <script src="js/vendor/unslider/unslider-min.js"></script>
-    <script src="js/vendor/jquery-event-move.js"></script>
-    <script src="js/vendor/jquery-event-swipe.js"></script>
-    <script src="js/vendor/smtp.js"></script>
-    <script src="js/grunt-project.js"></script>
-    <script src="slidemenu.js"></script>
+  <script src="js/vendor/jquery.min.js"></script>
+  <script src="js/vendor/slideout.min.js"></script>
+  <script src="js/vendor/unslider/unslider-min.js"></script>
+  <script src="js/vendor/jquery-event-move.js"></script>
+  <script src="js/vendor/jquery-event-swipe.js"></script>
+  <script src="js/vendor/smtp.js"></script>
+  <script src="js/grunt-project.js"></script>
+  <script src="slidemenu.js"></script>
 
 </body>
 
